data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_254.wast
;; 5. **Test Description**: Use a loop where `nop` is placed before an `unreachable` instruction which is guarded by a `br_if`.    - **Constraint**: Validates that despite `nop`, the flow correctly reaches `unreachable` only under the correct condition.    - **Relation to Infinite Loops**: Ensures failing to correctly reach `unreachable` does not cause the loop to execute indefinitely.

(assert_invalid
  (module
    (func (loop (nop) (br_if 1 (i32.const 1)) (unreachable)))
  )
  "unreachable not reached under correct condition"
)